--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -28,6 +28,7 @@
   {% assets filters="uglifyjs", output="build/app.js",
       "js/app.js",
       "js/services/query_state.js",
+      "js/directives/entity_icon.js",
       "js/controllers/search.js",
       "js/util.js" %}
     <script src='{{ ASSET_URL }}'></script>
