Basic directive for showing entity results.

--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      banana
+      <entity-detail result="detail"></entity-detail>
     </div>
   </div>
 </div>
