--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -29,6 +29,7 @@
       "js/app.js",
       "js/services/query_state.js",
       "js/directives/entity_icon.js",
+      "js/directives/entity_detail.js",
       "js/controllers/search.js",
       "js/util.js" %}
     <script src='{{ ASSET_URL }}'></script>
