--- a/schwifty/templates/angular/entity_detail.html
+++ b/schwifty/templates/angular/entity_detail.html
@@ -13,6 +13,6 @@
 
   <div class="well well-sm">
     This record is from <a ng-href="{{data.source.url}}">{{data.source.title}}</a>,
-    and was last updated: {{data.indexed_at}}.
+    and was last updated: {{data.indexed_at | date}}.
   </div>
 </div>
