--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -10,7 +10,7 @@
           <input class="form-control" id="q" ng-model="query.state.q" placeholder="People, companies, etc...">
         </div>
       </form>
-      <div class="list-group">
+      <div class="list-group result-list">
         <a ng-repeat="result in results.results"
           ng-click="showDetail(result)"
           class="list-group-item">
