Use metadata API in frontend.

--- a/schwifty/templates/angular/entity_detail.html
+++ b/schwifty/templates/angular/entity_detail.html
@@ -12,7 +12,7 @@
   </table>
 
   <div class="well well-sm">
-    This record is from <a ng-href="{{data.source.url}}">{{data.source.title}}</a>,
+    This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
     and was last updated: {{data.indexed_at | date}}.
   </div>
 </div>
