--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -18,7 +18,7 @@
             <entity-icon schema="result.schema"></entity-icon>
             {{result.entity.name}}
           </h4>
-          <p class="list-group-item-text">{{result.source.title}}</p>
+          <p class="list-group-item-text">{{metadata.sources[result.source].title}}</p>
         </a>
       </div>
     </div>
