--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -32,6 +32,7 @@
   {% assets filters="uglifyjs", output="build/app.js",
       "js/app.js",
       "js/services/query_state.js",
+      "js/services/metadata.js",
       "js/directives/entity_icon.js",
       "js/directives/entity_detail.js",
       "js/controllers/search.js",
