--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -35,6 +35,7 @@
       "js/services/metadata.js",
       "js/directives/entity_icon.js",
       "js/directives/entity_detail.js",
+      "js/directives/search_facet.js",
       "js/controllers/search.js",
       "js/filters.js",
       "js/util.js" %}
