--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -23,20 +23,26 @@
       "bower_components/moment/moment.js",
       "bower_components/angular/angular.js",
       "bower_components/angular-animate/angular-animate.js",
-      "bower_components/angular-route/angular-route.js",
+      "bower_components/angular-route/angular-route.js" %}
+    <script src='{{ ASSET_URL }}'></script>
+  {% endassets %}
+
+  <!--
+  {% assets filters="uglifyjs", output="build/bsui.js",
       "bower_components/angular-bootstrap/ui-bootstrap.js",
       "bower_components/angular-bootstrap/ui-bootstrap-tpls.js" %}
     <script src='{{ ASSET_URL }}'></script>
   {% endassets %}
+  -->
 
   {% assets filters="uglifyjs", output="build/app.js",
       "js/app.js",
       "js/services/query_state.js",
       "js/services/metadata.js",
       "js/directives/entity_icon.js",
-      "js/directives/entity_detail.js",
       "js/directives/search_facet.js",
       "js/controllers/search.js",
+      "js/controllers/entity.js",
       "js/filters.js",
       "js/util.js" %}
     <script src='{{ ASSET_URL }}'></script>
