--- a/schwifty/templates/angular/entity.html
+++ b/schwifty/templates/angular/entity.html
@@ -1,18 +1,27 @@
-<div class="entity-detail" ng-show="data.schema">
-  <h2>
-    <entity-icon schema="data.schema"></entity-icon>
-    {{data.entity.name}}
-  </h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-9 entity-detail" ng-show="data.schema">
+      <h2>
+        <entity-icon schema="data.schema"></entity-icon>
+        {{data.entity.name}}
+      </h2>
+    </div>
+    <div class="col-md-3">
+      <div class="well well-sm">
+        This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
+        and was last updated: {{data.indexed_at | date}}.
+      </div>
+    </div>
+    <div class="col-md-9 entity-detail" ng-show="data.schema">
+      <table class="table table-condensed">
+        <tr ng-repeat="row in data.rows | orderBy: 'header'">
+          <th>{{row.header}}</th>
+          <td>{{row.value}}</td>
+        </tr>
+      </table>
+    </div>
 
-  <table class="table table-condensed">
-    <tr ng-repeat="row in data.rows | orderBy: 'header'">
-      <th>{{row.header}}</th>
-      <td>{{row.value}}</td>
-    </tr>
-  </table>
-
-  <div class="well well-sm">
-    This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
-    and was last updated: {{data.indexed_at | date}}.
   </div>
 </div>
