--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -1,14 +1,27 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-9">
     <form ng-submit="submitSearch()">
-      <div class="form-group col-md-12">
+      <div class="form-group">
         <!-- label for="q">Search for</label-->
-        <input class="form-control input-lg" id="q" ng-model="query.state.q" placeholder="People, companies, etc...">
+        <input class="form-control" id="q" ng-model="query.state.q" placeholder="People, companies, etc...">
       </div>
     </form>
+    </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
+      <search-facet results="results" facet="source"
+        type="sources" title="Data sources">
+      </search-facet>
+
+      <search-facet results="results" facet="schema"
+        type="schemas" title="Entity types">
+      </search-facet>
+    </div>
+    <div class="col-md-9">
       <div class="list-group result-list">
         <a ng-repeat="result in results.results"
           ng-click="showEntity(result)"
@@ -21,17 +34,6 @@
         </a>
       </div>
     </div>
-    <div class="col-md-3">
-      <entity-detail result="detail"></entity-detail>
-    </div>
-    <div class="col-md-3">
-      <search-facet results="results" facet="source"
-        type="sources" title="Data sources">
-      </search-facet>
 
-      <search-facet results="results" facet="schema"
-        type="schemas" title="Entity types">
-      </search-facet>
-    </div>
   </div>
 </div>
