--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -37,8 +37,8 @@
 
   {% assets filters="uglifyjs", output="build/app.js",
       "js/app.js",
-      "js/services/query_state.js",
       "js/services/metadata.js",
+      "js/services/query.js",
       "js/directives/entity_icon.js",
       "js/directives/search_facet.js",
       "js/controllers/search.js",
