More styling of the app.

--- a/schwifty/templates/angular/search_facet.html
+++ b/schwifty/templates/angular/search_facet.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default panel-facet">
   <div class="panel-heading">{{title}}</div>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="value in result.values"
