--- a/schwifty/static/style.scss
+++ b/schwifty/static/style.scss
@@ -1,4 +1,5 @@
 $occrp-red: #982022;
+$occrp-id-red: #f31d35;
 $occrp-light-green: #00bac1;
 $occrp-dark-green: #3a4953;
 
@@ -10,23 +11,65 @@ $brand-success: $occrp-light-green;
 $border-radius-base: 0px;
 $list-group-border-radius: 0;
 
+$body-bg: $occrp-dark-green;
+$text-color: #eee;
+
+$list-group-bg:                 lighten($body-bg, 10%);
+$list-group-border:             darken($body-bg, 5%);
+$list-group-hover-bg:           $list-group-border !default;
+$list-group-link-heading-color: #fff;
+
+$panel-bg:                    lighten($body-bg, 10%) !default;
+$panel-body-padding:          15px !default;
+$panel-heading-padding:       10px 15px !default;
+$panel-footer-padding:        $panel-heading-padding !default;
+$panel-border-radius:         $border-radius-base !default;
+
+$panel-inner-border:          #ddd !default;
+$panel-footer-bg:             #f5f5f5 !default;
+
+// $panel-default-text:          $gray-dark !default;
+$panel-default-border:        $body-bg !default;
+$panel-default-heading-bg:    $body-bg !default;
+
+$panel-primary-text:          #fff !default;
+
 $navbar-default-color: #fff;
-$navbar-default-bg: $occrp-dark-green;
+$navbar-default-bg: darken($body-bg, 5%);
 $navbar-default-link-color: #fff;
 $navbar-default-link-hover-color:          #ccc !default;
 $navbar-default-link-active-color:         #eee !default;
 $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%) !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 
-
 $font-family-sans-serif:  'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:       'Bitter', Georgia, serif;
 
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
 
+@mixin placeholder-color($color) {
+    &::-webkit-input-placeholder {
+       color: $color;
+    }
+
+    &:-moz-placeholder {
+       color: $color;
+    }
+
+    &::-moz-placeholder {
+       color: $color;
+    }
+
+    &:-ms-input-placeholder {
+       color: $color;
+    }
+}
+
 @mixin header-font {
     font-family: $font-family-serif;
     font-weight: 800;
+    color: $text-color;
+
 }
 
 h1, h2, h3, h4 {
@@ -49,9 +92,12 @@ h1, h2, h3, h4 {
         }
 
         input {
-            background-color: lighten($navbar-default-bg, 5%);
-            color: $navbar-default-link-color;
-            border: 1px solid darken($navbar-default-bg, 5%);
+            background-color: $brand-primary;
+            color: $text-color;
+            border: 1px solid darken($brand-primary, 5%);
+
+            $placeholder-col: darken($brand-primary, 20%);
+            @include placeholder-color($placeholder-col);
         }
     }
 }
@@ -61,10 +107,24 @@ h1, h2, h3, h4 {
     a {
         cursor: pointer;
     }
+
+    .entity-icon, small {
+        color: darken($text-color, 20%);
+    }
 }
 
+// facets
+.panel-facet {
+    .panel-heading {
+        @include header-font;
+    }
 
-// entity details section (side pane)
+    span.badge {
+        background-color: $body-bg;
+    }
+}
+
+// entity details
 .entity-detail {
     .table {
         th {
