--- a/schwifty/templates/angular/entity.html
+++ b/schwifty/templates/angular/entity.html
@@ -9,9 +9,11 @@
       </h2>
     </div>
     <div class="col-md-3">
-      <div class="well well-sm">
-        This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
-        and was last updated: {{data.indexed_at | date}}.
+      <div class="panel panel-default panel-facet">
+        <div class="panel-body">
+          This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
+          and was last updated: {{data.indexed_at | date}}.
+        </div>
       </div>
     </div>
     <div class="col-md-9 entity-detail" ng-show="data.schema">
