--- a/schwifty/static/style.scss
+++ b/schwifty/static/style.scss
@@ -138,5 +138,8 @@ h1, h2, h3, h4 {
             max-width: 40%;
             width: 40%;
         }
+        th, td {
+            border-top: 1px solid $list-group-border;
+        }
     }
 }
