fix protocol-relative url

--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -5,7 +5,7 @@
   <title>{{config.APP_NAME}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Bitter:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700|Bitter:400,700' rel='stylesheet' type='text/css'>
 
   {% assets filters="scss,cssmin", output="build/style.css",
     "bower_components/angular/angular-csp.css",
