--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>{{config.APP_NAME}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google" content="notranslate" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700|Bitter:400,700' rel='stylesheet' type='text/css'>
 
