--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -1,17 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3">
-      <search-facet results="results" facet="entity.jurisdiction_code"
-        type="countries" title="Jurisdictions">
-      </search-facet>
-      <search-facet results="results" facet="source"
-        type="sources" title="Data sources">
-      </search-facet>
-      <search-facet results="results" facet="schema"
-        type="schemas" title="Entity types">
-      </search-facet>
-    </div>
-    <div class="col-md-6">
+    <div class="col-md-9">
+      <form ng-submit="submitSearch()">
+        <div class="form-group">
+          <!-- label for="q">Search for</label-->
+          <input class="form-control input-lg" id="q" ng-model="query.state.q" placeholder="Search for people, companies, etc...">
+        </div>
+      </form>
       <div class="list-group result-list">
         <a ng-repeat="result in results.results"
           ng-click="showEntity(result)"
@@ -24,6 +19,16 @@
         </a>
       </div>
     </div>
-
+    <div class="col-md-3" id="sidebar">
+      <search-facet results="results" facet="entity.jurisdiction_code"
+        type="countries" title="Jurisdictions">
+      </search-facet>
+      <search-facet results="results" facet="source"
+        type="sources" title="Data sources">
+      </search-facet>
+      <search-facet results="results" facet="schema"
+        type="schemas" title="Entity types">
+      </search-facet>
+    </div>
   </div>
 </div>
