Darker theme variant

--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -16,7 +16,8 @@
     <link href='{{ ASSET_URL }}' rel='stylesheet' type='text/css'>
   {% endassets %}
 
-  <link rel="shortcut icon" href="https://www.occrp.org/templates/occrp/favicon.ico">
+  <!-- link rel="shortcut icon" href="https://www.occrp.org/templates/occrp/favicon.ico" -->
+  <link rel="shortcut icon" href="/static/img/occrp-logo-bg.png">
 </head>
 <body ng-controller="AppController as app">
   <div ng-view></div>
