--- a/schwifty/static/style.scss
+++ b/schwifty/static/style.scss
@@ -1,4 +1,5 @@
 $occrp-red: #982022;
+$occrp-red: #f31d35;
 // $occrp-navy: #241F38;
 $occrp-green: #27918C;
 $occrp-dark: #3a4953;
@@ -70,8 +71,10 @@ body, html {
 }
 
 .search-container {
-    border-top: $spacing / 2 solid $brand-primary;
+    //border-top: $spacing / 2 solid $brand-primary;
+    border-top: $spacing / 2 solid $occrp-green;
     background-color: $gray-subtle;
+    background-color: $occrp-dark;
     margin-bottom: $spacing * 4;
     padding-top: $spacing * 2;
     padding-bottom: $spacing * 2;
