--- a/schwifty/templates/angular/entity.html
+++ b/schwifty/templates/angular/entity.html
@@ -1,22 +1,14 @@
-<div class="container-fluid">
+<div class="container entity-detail">
   <div class="row">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-9 entity-detail" ng-show="data.schema">
+    <div class="col-md-12" ng-show="data.schema">
       <h2>
         <entity-icon schema="data.schema"></entity-icon>
         {{data.entity.name}}
       </h2>
     </div>
-    <div class="col-md-3">
-      <div class="panel panel-default panel-facet">
-        <div class="panel-body">
-          This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
-          and was last updated: {{data.indexed_at | date}}.
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 entity-detail" ng-show="data.schema">
+  </div>
+  <div class="row">
+    <div class="col-md-8" ng-show="data.schema">
       <table class="table table-condensed">
         <tr ng-repeat="row in data.rows | orderBy: 'header'">
           <th>{{row.header}}</th>
@@ -24,6 +16,11 @@
         </tr>
       </table>
     </div>
-
+    <div class="col-md-4">
+      <p class="help-block">
+          This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
+          and was last updated: {{data.indexed_at | date}}.
+      </p>
+    </div>
   </div>
 </div>
